# OpenCV

./: .gitignore  README.md  docker-compose.yaml  makefile  package-lock.json  requirements2.txt  temp.json  temp.yaml
.github/workflows/: build-pipeline.yml  deploy-backend-dev.yaml  deploy-pipeline.yaml  node.js.yml  pipeline.yml
root/backend/: .dockerignore  .gcloudignore  Dockerfile  Dockerfile-build  ModelTrain.ipynb  api_specs.py  app.yaml  awesomecv.cls  main.py  requirements.txt  test_JD_requirement_extraction.ipynb  test_JSON_to_Pandas.ipynb  test_cv_builder.ipynb  test_extract_duration.ipynb  test_word_embeddning.ipynb  tune_for_demo.ipynb  word_embedding.ipynb
root/backend/demo/: ds10_modified.json  test.json
root/backend/generation/: LICENSE  README.md  __init__.py  generation.py  pyproject.toml  requirements.txt  tasks.py
root/backend/generation/builder/: __init__.py  commands.py  documents.py  environments.py  jsonresume.py
root/backend/generation/data/: apple.json  apple.yaml  demo1.json  demo1.yaml  doesntwork.yaml  l_BA11.yaml  l_BA3.yaml  l_BA4.yaml  temp.json  temp.yaml  works.yaml
root/backend/generation/docker-texlive/: Dockerfile
root/backend/generation/latex/: awesomecv.cls
root/backend/generation/scripts/: validate.py  xelatex
root/backend/jd_examples/: BA_JD1.txt  BA_JD2.txt  DS_JD1.txt  DS_JD2.txt  SE_JD1.txt  SE_JD2.txt
root/backend/model/: Job.py  embedding.py  job_example.csv  keyword_utils.py  resume_scorer.py  train_dictionaries.py  train_job_keywords.py
root/frontend/: package-lock.json  package.json  tailwind.config.js
(+130 files in other folders)
